update them hinh DL

--- a/index.html
+++ b/index.html
@@ -87,15 +87,16 @@
 
 	<!--hero Section-->
 	<section id="hero">
-		<a href="#" class="video-audio"><i class="fa fa-volume-up volume"></i></a>
-		<video class="intro-video" autoplay>
+		<!-- <a href="#" class="video-audio"><i class="fa fa-volume-up volume"></i></a> -->
+		<!-- <video class="intro-video" autoplay>
 			<source src="src/assets/media/Glory Man Utd.mp4" type="video/mp4">
-		</video>
+		</video> -->
+		<img class="img-rounded" src="src/assets/images/hinhnen.jpg">
 		<!-- video-overlay -->
 		<!-- not applied change css -->
 		<!--<div class="video-overlay">
 		</div>-->
-		<h2>Welcome BuQuMi</h2>
+		<!-- <h2>Welcome BuQuMi</h2> -->
 
 		<!--bottom-icon-tile -panel-->
 		<!-- <div class="bottom-icon-tile-pannel hidden-sm-down">
@@ -184,9 +185,9 @@
 				<article class="col-md-4">
 					<div class="package-wrapper">
 						<div class="card package-card">
-							<img src="src/assets/images/packages/safari.jpg" alt="" class="card-img-top">
-							<h5 class="package-card-heading">Safari Masti</h5>
-							<h4 class="package-price">$ 2900.59</h4>
+							<img src="src/assets/images/Clothes/000053.JPG" alt="" class="card-img-top">
+							<h5 class="package-card-heading">Cỏ Mỹ</h5>
+							<h4 class="package-price">$99</h4>
 							<ul class="package-menu">
 								<li>Tiger Watching</li>
 								<li>Elephant Ride</li>
@@ -195,7 +196,7 @@
 							</ul>
 							<p class="package-intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit,Lorem ipsum dolor sit amet, consectetur adipisicing elit,
 								sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-							<a type="button" href="#" class="btn btn-default btn-lg btn-price" data-toggle="modal" data-target="#creditCardPayment">Buy Now</a>
+							<a type="button" href="#" class="btn btn-default btn-lg btn-price" data-toggle="modal" data-target="#creditCardPayment">Mua Đi</a>
 						</div>
 
 					</div>
@@ -204,9 +205,9 @@
 				<article class="col-md-4">
 					<div class="package-wrapper">
 						<div class="card package-card">
-							<img src="src/assets/images/packages/boudhanath.jpg" alt="" class="card-img-top">
-							<h5 class="package-card-heading">Heritage Tour</h5>
-							<h4 class="package-price">$ 2900.49</h4>
+							<img src="src/assets/images/Clothes/000054.JPG" alt="" class="card-img-top">
+							<h5 class="package-card-heading">Cỏ Cam</h5>
+							<h4 class="package-price">$199</h4>
 							<ul class="package-menu">
 								<li>Palace Visit</li>
 								<li>Museum Tour</li>
@@ -215,7 +216,7 @@
 							</ul>
 							<p class="package-intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit,Lorem ipsum dolor sit amet, consectetur adipisicing elit,
 								sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-							<a type="button" href="#" class="btn btn-default btn-lg btn-price" data-toggle="modal" data-target="#creditCardPayment">Buy Now</a>
+							<a type="button" href="#" class="btn btn-default btn-lg btn-price" data-toggle="modal" data-target="#creditCardPayment">Mua Đi</a>
 						</div>
 					</div>
 				</article>
@@ -223,9 +224,9 @@
 				<article class="col-md-4">
 					<div class="package-wrapper">
 						<div class="card package-card">
-							<img src="src/assets/images/packages/kathmandu.jpg" alt="" class="card-img-top">
-							<h5 class="package-card-heading">Explore Kathmandu</h5>
-							<h4 class="package-price">$ 2900.99</h4>
+							<img src="src/assets/images/Clothes/000055.JPG" alt="" class="card-img-top">
+							<h5 class="package-card-heading">Cỏ Việt</h5>
+							<h4 class="package-price">$9.9</h4>
 							<ul class="package-menu">
 								<li>Mountain Bike</li>
 								<li>Market Place</li>
@@ -235,7 +236,7 @@
 							<p class="package-intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit,Lorem ipsum dolor sit amet, consectetur adipisicing elit,
 								sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
-							<a type="button" href="#" class="btn btn-default btn-lg btn-price" data-toggle="modal" data-target="#creditCardPayment">Buy Now</a>
+							<a type="button" href="#" class="btn btn-default btn-lg btn-price" data-toggle="modal" data-target="#creditCardPayment">Mua Đi</a>
 						</div>
 					</div>
 				</article>
@@ -246,9 +247,9 @@
 
 		<!-- thins-to-do section-->
 		<section id="things-to-do">
-			<h3>things to do</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet porro molestiae ex, iusto animi fugit magni eos est ducimus,
-				inventore vitae earum adipisci saepe et voluptatum at iure doloremque, odit.</p>
+			<h3>Manchester United</h3>
+			<p>Câu lạc bộ bóng đá Manchester United là một câu lạc bộ bóng đá chuyên nghiệp có trụ sở tại Old Trafford, Greater Machester, Anh. 
+				Câu lạc bộ đang chơi tại Giải bóng đá Ngoại hạng Anh, giải đấu hàng đầu trong hệ thống bóng đá Anh.</p>
 			<div class="row">
 				<article class="col-md-3 things-to-do-wrapper">
 					<div class="card things-to-do-card">
@@ -336,48 +337,58 @@
 
 		<!-- event section-->
 		<section id="events">
-			<h3>what's on</h3>
-			<p>Nepal is culutrally diverse country with variety of cast, religion and ethnicity. The country celebrate various festivals
-				all around the year and has its own calendar "Nepal Sambat".Some of the festivals you can celebrate with local this time
-				around:
+			<h3>Phú Sơn</h3>
+			<p>Phú Sơn là một xã thuộc huyện Lâm Hà, tỉnh Lâm Đồng, Việt Nam. Xã Phú Sơn có diện tích 175,2 km², 
+				dân số năm 1999 là 7005 người, mật độ dân số đạt 40 người/km²:
 			</p>
 
 			<div class="row">
 				<article class="col-md-4 col-lg-3">
 					<div class="event-wrapper">
-						<img class="event-thumbnail thumbnail" src="src/assets/images/rara.jpg" alt="">
+						<img class="event-thumbnail thumbnail" src="src/assets/images/View/000044.JPG" alt="">
 						<div class="event-tag"><span>2<sup>nd</sup> Feb</span></div>
 					</div>
-					<div class="event-heading">Dashain</div>
-					<p class="event-intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima officiis aspernatur voluptatem itaque fugit mollitia
-						vitae veniam at eius ad optio quos minus unde nulla, dolorem dolor quisquam quasi est.</p>
+					<div class="event-heading">Chùa Bửu Đóa</div>
+					<p class="event-intro">Nhìn làn mây trắng chơi vơi.</br>
+						Leo lên tới đỉnh cho trời thấp hơn</br>
+						Nhìn quanh non nước giang sơn</br>
+						Vén mây nâng cánh cho hồn thơ bay</br>
+						Tháng ngày cách mấy gang tay</br>
+						Túi thơ đầy những đắm say cuộc đời !</p>
 				</article>
 				<article class="col-md-4 col-lg-3">
 					<div class="event-wrapper">
-						<img class="event-thumbnail thumbnail" src="src/assets/images/ropaijatra.jpg" alt="">
+						<img class="event-thumbnail thumbnail" src="src/assets/images/View/000045.JPG" alt="">
 						<div class="event-tag"><span>1<sup>st</sup> Jun</span></div>
 					</div>
-					<div class="event-heading">Dhan Ropai Jatra</div>
-					<p class="event-intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas quaerat molestias ad laboriosam, aperiam, aliquam ipsum
-						cupiditate porro dicta quasi beatae nisi neque, sequi iste asperiores fuga officiis praesentium fugit.</p>
+					<div class="event-heading">Lotus Flower</div>
+					<p class="event-intro">Ngàn sen hé nhụy ở trong đầm</br>
+						Tuyệt sắc khoe mình vững chữ tâm</br>
+						Kẻ thích đi qua nhìn ái mộ </br>
+						Người ưa bước lại thấy khen thầm</br>
+						Dù mưa bão dập chưa hề đổi</br>
+						Dẫu gió sương lùa cũng lặng câm</br>
+						Mọc giữa bùn lầy không nhuộm bẩn</br>
+						Màu hoa vẫn thắm nụ xanh mầm .</p>
 				</article>
 				<article class="col-md-4 col-lg-3 ">
 					<div class="event-wrapper">
-						<img class="event-thumbnail thumbnail" src="src/assets/images/kumari.jpg" alt="">
+						<img class="event-thumbnail thumbnail" src="src/assets/images/View/000051.JPG" alt="">
 						<div class="event-tag"><span>23<sup>rd</sup>July</span></div>
 					</div>
-					<div class="event-heading">Kumari Puja</div>
-					<p class="event-intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, ipsum tenetur asperiores. Nam hic alias quas dolores
-						totam itaque fuga cumque odit, reprehenderit debitis culpa quia quaerat ipsam quidem tenetur!</p>
+					<div class="event-heading">Bougainvillea</div>
+					<p class="event-intro">Chi Hoa giấy là một chi trong thực vật có hoa bản địa khu vực Nam Mỹ, 
+						từ Brasil về phía tây tới Peru và về phía nam tới miền nam Argentina. 
+						Các tác giả khác nhau công nhận từ 4 tới 18 loài trong chi.</p>
 				</article>
 				<article class="col-md-4 col-lg-3">
 					<div class="event-wrapper">
-						<img class="event-thumbnail thumbnail" src="src/assets/images/machhindranath.jpg" alt="">
+						<img class="event-thumbnail thumbnail" src="src/assets/images/View/000052.JPG" alt="">
 						<div class="event-tag"><span>2<sup>nd</sup>Oct</span></div>
 					</div>
-					<div class="event-heading">Machhindranth Jatra</div>
-					<p class="event-intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima officiis aspernatur voluptatem itaque fugit mollitia
-						vitae veniam at eius ad optio quos minus unde nulla, dolorem dolor quisquam quasi est.</p>
+					<div class="event-heading">Don't Know Flower</div>
+					<p class="event-intro">Hồng hay hường là tên gọi chung cho các loài thực vật có hoa dạng cây bụi hoặc cây leo lâu năm thuộc chi Rosa, 
+						họ Rosaceae, với hơn 100 loài với màu hoa đa dạng, phân bố từ miền ôn đới đến nhiệt đới.</p>
 				</article>
 
 			</div>
@@ -388,55 +399,55 @@
 
 		<!-- destinations section -->
 		<section id="destinations">
-			<h3>Destinations</h3>
+			<h3>Anniversary</h3>
 			<div class="row">
 				<article class="col-md-4 col-lg-3">
 					<div class="destination-wrapper">
-						<img class="destination-thumbnail thumbnail" src="src/assets/images/rara.jpg" alt="">
-						<div class="destination-banner">Rara Lake</div>
+						<img class="destination-thumbnail thumbnail" src="src/assets/images/Anniversary/000038.JPG" alt="">
+						<div class="destination-banner">Hồ Xuân Hương</div>
 					</div>
 				</article>
 				<article class="col-md-4 col-lg-3">
 					<div class="destination-wrapper">
-						<img class="destination-thumbnail img-thumbnail" src="src/assets/images/chitwan.jpg" alt="">
-						<div class="destination-banner">Chitwan National park</div>
+						<img class="destination-thumbnail img-thumbnail" src="src/assets/images/Anniversary/000047.JPG" alt="">
+						<div class="destination-banner">Rừng Sâu</div>
 					</div>
 				</article>
 				<article class="col-md-4 col-lg-3">
 					<div class="destination-wrapper">
-						<img class="destination-thumbnail img-thumbnail" src="src/assets/images/destination.jpg" alt="">
-						<div class="destination-banner">Mustang</div>
-						<div class="destination-banner">Mustang</div>
+						<img class="destination-thumbnail img-thumbnail" src="src/assets/images/Anniversary/000057.JPG" alt="">
+						<div class="destination-banner">Cây Đa Ngàn Tuổi</div>
+						<!-- <div class="destination-banner">Mustang</div> -->
 					</div>
 				</article>
 				<article class="col-md-4 col-lg-3">
 					<div class="destination-wrapper">
-						<img class="destination-thumbnail img-thumbnail" src="src/assets/images/bhaktapur.jpg" alt="">
-						<div class="destination-banner">Bhaktapur Square</div>
+						<img class="destination-thumbnail img-thumbnail" src="src/assets/images/Anniversary/000053.JPG" alt="">
+						<div class="destination-banner">Lá Xanh</div>
 					</div>
 				</article>
 				<article class="col-md-4 col-lg-3">
 					<div class="destination-wrapper">
-						<img class="destination-thumbnail img-thumbnail" src="src/assets/images/mount.jpeg" alt="">
-						<div class="destination-banner">Mt. Everest</div>
+						<img class="destination-thumbnail img-thumbnail" src="src/assets/images/Anniversary/000061.JPG" alt="">
+						<div class="destination-banner">Đỉnh Chuông</div>
 					</div>
 				</article>
 				<article class="col-md-4 col-lg-3">
 					<div class="destination-wrapper">
-						<img class="destination-thumbnail img-thumbnail" src="src/assets/images/namche.jpg" alt="">
-						<div class="destination-banner">Namche Trek</div>
+						<img class="destination-thumbnail img-thumbnail" src="src/assets/images/Anniversary/000063.JPG" alt="">
+						<div class="destination-banner">Rêu Phong</div>
 					</div>
 				</article>
 				<article class="col-md-4 col-lg-3">
 					<div class="destination-wrapper">
-						<img class="destination-thumbnail img-thumbnail" src="src/assets/images/mustang.jpg" alt="">
-						<div class="destination-banner">Namche Trek</div>
+						<img class="destination-thumbnail img-thumbnail" src="src/assets/images/Anniversary/000064.JPG" alt="">
+						<div class="destination-banner">Lên Non</div>
 					</div>
 				</article>
 				<article class="col-md-4 col-lg-3">
 					<div class="destination-wrapper">
-						<img class="destination-thumbnail img-thumbnail" src="src/assets/images/sarangkot.jpg" alt="">
-						<div class="destination-banner">Sarangkot</div>
+						<img class="destination-thumbnail img-thumbnail" src="src/assets/images/Anniversary/000065.JPG" alt="">
+						<div class="destination-banner">Ăn Trưa</div>
 					</div>
 				</article>
 
