--- a/index2.html
+++ b/index2.html
@@ -1,43 +1,47 @@
 <!DOCTYPE html>
 <html>
-    <header>
-        <title>baitap-view-nasa</title>
-        <link rel="stylesheet" href="src/assets/css/nasa.css">
-        <link rel="stylesheet" href="src/assets/css/normalize.css">
-    </header>
-    <body>
-        <div class="containternasa" id="vue_app">
-                <the-bai-bao-nasa
-                v-for = "dataObj in NasaData"
-                v-bind:imagininfo = "dataObj"
-                v-bind:key = "dataObj.id"
-            ></the-bai-bao-nasa> 
+<header>
+    <title>baitap-view-nasa</title>
+    <link rel="stylesheet" href="src/assets/css/nasa.css">
+    <link rel="stylesheet" href="src/assets/css/normalize.css">
+</header>
 
-        <div id="titlenasa"></div>
+<body>
+    <div class="containternasa" id="vue_app">
+        <!-- <the-bai-bao-nasa 
+
+            v-bind:viewinfo="NasaData"
+        ></the-bai-bao-nasa> -->
+
+        <div id="titlenasa">
+            {{NasaData.title}}
+        </div>
         <div id="headernasa">
-            <div class="copyright">author</div>
+            <img v-bind:src="NasaData.url" class="imanasa">
+            <div class="copyright">{{NasaData.copyright}}</div>
         </div>
 
         <div id="contentnasa">
-            <div id="datetime">
+            {{NasaData.explanation}}
+            <div id="datetime">{{NasaData.date}}
             </div>
         </div>
-        <button id="prenasa">Previous</button>
-        <button id="nextnasa">Next</button>
+        <button id="prenasa" v-on:click="preNasa" >Previous</button>
+        <button id="nextnasa" v-on:click="nextNasa" v-bind:disabled="disableNextBtn">Next</button>
     </div>
- 
- 
 
 
 
 
-        <script type="text/javascript" src="src/assets/scripts/nasa.js"></script>
-        <div id="container-nasa"
-            v-for="dataDemo in dataNasa "
-            v-bind:nasainfodemo="dataDemo"
-            v-bind:key="dataDemo.id"
-        >
-            
-        </div>
-    </body>
+
+    <!-- Thu vien de RENDER HTML -->
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
+    	<!-- Thu vien de LOAD JSON API -->
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    
+    <script type="text/javascript" src="src/assets/scripts/nasa.js"></script>
+    <script type="text/javascript" src="src/vidu.js"></script>
+    <div id="container-nasa" v-for="dataDemo in dataNasa " v-bind:nasainfodemo="dataDemo" v-bind:key="dataDemo.id"></div>
+
+</body>
 </html>
