--- a/index.html
+++ b/index.html
@@ -245,12 +245,18 @@
 		</section>
 		<!-- / deals-and-packages section-->
 
-		<section id="things-to-do">
-			<h3>API của NYT em mượn về chơi đỡ vài ngày</h3>
-			<p>em chỉ mượn chứ không lấy, lấy cũng kệ em. ahihi </p>
+		<section id="things-to-do ">
+				<h3>API của NYT em mượn về chơi đỡ vài ngày</h3>
+				<p>em chỉ mượn chứ không lấy, lấy cũng kệ em. ahihi </p>
 			<div class="row" id="vue-app">
 
-		<the-bai-bao v-for="dataObj in NYTimesData" v-bind:imagininfo="dataObj" v-bind:key="dataObj.id"></the-bai-bao>
+			<the-bai-bao 
+				v-for="dataObj in NYTimesData" 
+				v-bind:imagininfo="dataObj" 
+				v-bind:key="dataObj.id">
+			</the-bai-bao>
+		</div>
+		</section>
 		<!-- thins-to-do section-->
 		<section id="things-to-do">
 			<h3>Manchester United</h3>
