--- a/index.html
+++ b/index.html
@@ -182,12 +182,12 @@
 		<section id="deals-and-packages">
 			<h3>Events</h3>
 			<div class="row">
-				<article class="col-md-4">
+				<article class="col-md-6">
 					<div class="package-wrapper">
 						<div class="card package-card">
 							<img src="src/assets/images/Clothes/000053.jpg" alt="" class="card-img-top">
-							<h5 class="package-card-heading">Cỏ Mỹ</h5>
-							<h4 class="package-price">$99</h4>
+							<h5 class="package-card-heading">Thịt Bò Tươi loại 1</h5>
+							<h4 class="package-price">$299</h4>
 							<ul class="package-menu">
 								<li>Tiger Watching</li>
 								<li>Elephant Ride</li>
@@ -196,17 +196,17 @@
 							</ul>
 							<p class="package-intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit,Lorem ipsum dolor sit amet, consectetur adipisicing elit,
 								sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-							<a type="button" href="#" class="btn btn-default btn-lg btn-price" data-toggle="modal" data-target="#creditCardPayment">Mua Đi</a>
+							<a type="button" href="#" class="btn btn-default btn-lg btn-price" data-toggle="modal" data-target="#creditCardPayment">Mua giùm Dung</a>
 						</div>
 
 					</div>
 				</article>
 
-				<article class="col-md-4">
+				<article class="col-md-6">
 					<div class="package-wrapper">
 						<div class="card package-card">
 							<img src="src/assets/images/Clothes/000054.jpg" alt="" class="card-img-top">
-							<h5 class="package-card-heading">Cỏ Cam</h5>
+							<h5 class="package-card-heading">thịt bò tươi loại 2</h5>
 							<h4 class="package-price">$199</h4>
 							<ul class="package-menu">
 								<li>Palace Visit</li>
@@ -216,17 +216,36 @@
 							</ul>
 							<p class="package-intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit,Lorem ipsum dolor sit amet, consectetur adipisicing elit,
 								sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-							<a type="button" href="#" class="btn btn-default btn-lg btn-price" data-toggle="modal" data-target="#creditCardPayment">Mua Đi</a>
+							<a type="button" href="#" class="btn btn-default btn-lg btn-price" data-toggle="modal" data-target="#creditCardPayment">Mua giùm Dung</a>
 						</div>
 					</div>
 				</article>
 
-				<article class="col-md-4">
+				<article class="col-md-6">
+					<div class="package-wrapper">
+						<div class="card package-card">
+							<img src="src/assets/images/Clothes/dungthitbo.jpg" alt="" class="card-img-top">
+							<h5 class="package-card-heading">thịt bò tươi loại 3</h5>
+							<h4 class="package-price">$99</h4>
+							<ul class="package-menu">
+								<li>Palace Visit</li>
+								<li>Museum Tour</li>
+								<li>City Cycling</li>
+								<li>Food Taste</li>
+							</ul>
+							<p class="package-intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit,Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+								sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+							<a type="button" href="#" class="btn btn-default btn-lg btn-price" data-toggle="modal" data-target="#creditCardPayment">Mua giùm Dung</a>
+						</div>
+					</div>
+				</article>
+
+				<article class="col-md-6">
 					<div class="package-wrapper">
 						<div class="card package-card">
 							<img src="src/assets/images/Clothes/000055.jpg" alt="" class="card-img-top">
-							<h5 class="package-card-heading">Cỏ Việt</h5>
-							<h4 class="package-price">$9.9</h4>
+							<h5 class="package-card-heading">thịt bò tươi loại bỏ</h5>
+							<h4 class="package-price">$0.9</h4>
 							<ul class="package-menu">
 								<li>Mountain Bike</li>
 								<li>Market Place</li>
@@ -236,7 +255,7 @@
 							<p class="package-intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit,Lorem ipsum dolor sit amet, consectetur adipisicing elit,
 								sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
-							<a type="button" href="#" class="btn btn-default btn-lg btn-price" data-toggle="modal" data-target="#creditCardPayment">Mua Đi</a>
+							<a type="button" href="#" class="btn btn-default btn-lg btn-price" data-toggle="modal" data-target="#creditCardPayment">Mua giùm Dung</a>
 						</div>
 					</div>
 				</article>
