--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link href="src/assets/images/logos/MU.png" rel="icon" type="image/x-icon" />
 
 	<!-- site tile -->
-	<title>Welcome BuQuMi</title>
+	<title>Welcome BuQuMiiiiiiiii</title>
 	<!-- normalise css -->
 	<link rel="stylesheet" href="src/assets/css/normalize.css">
 	<!-- bootstrap css -->
